finished overall structure of page 1 of 3 in html

--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
 
 <body>
     <header>
-            <h1>Art of Braai</h1>
 
+<!-- Logo -->
+            <h1 id="logo">Art of Braai</h1>
+
+<!-- Navigation Bar -->
+
+        <nav>
             <a href="">Home</a>
 
             <a href="">Video</a>
             
             <a href="">Contact details</a>
+        </nav>
+
     </header>
 
-    <section></section>
+    <section id="tutorial-1">Image 1 with clickable link</section>
 
-    <section></section>
+    <section id="tutorial-2">Image 1 with clickable link</section>
 
-    <section></section>
+    <section id="tutorial-3">Image 1 with clickable link</section>
     
 </body>
 
