added footer to page 1 of 3

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <section id="tutorial-2">Image 1 with clickable link</section>
 
     <section id="tutorial-3">Image 1 with clickable link</section>
+
+    <footer>social media links</footer>
     
 </body>
 
