added web links to sections to html and started font styles in css

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 
     </header>
 
-    <section id="tutorial-1">Image 1 with clickable link</section>
+    <!-- Three clickable images for tutorial videos-->
 
-    <section id="tutorial-2">Image 1 with clickable link</section>
+    <section href="" target="_blank" id="tutorial-1">Image 1 with clickable link</section>
 
-    <section id="tutorial-3">Image 1 with clickable link</section>
+    <section href="" target="_blank" id="tutorial-2">Image 1 with clickable link</section>
+
+    <section href="" target="_blank" id="tutorial-3">Image 1 with clickable link</section>
 
     <footer>social media links</footer>
     
