added font and spacing to nav bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <a href="">Video</a>
             
-            <a href="">Contact details</a>
+            <a href="">Contact</a>
         </nav>
 
     </header>
