Added images to sections for first page

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
 
     <!-- Three clickable images for tutorial videos-->
 
-    <section href="" target="_blank" id="tutorial-1">Image 1 with clickable link</section>
+    <img src="/assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors">
 
-    <section href="" target="_blank" id="tutorial-2">Image 1 with clickable link</section>
+    <img src="/assets/img/boereword-braai.jpg" alt="Boerewors on grill">
 
-    <section href="" target="_blank" id="tutorial-3">Image 1 with clickable link</section>
+    <section href="" target="_blank" id="tutorial-3">
+        
+        <img src="/assets/img/boerewors-roll-relish.jpg" alt="">
+
+    </section>>
 
     <footer>social media links</footer>
     
