removed animation from images and changed nav bar

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 <!-- Navigation Bar -->
 
         <nav>
-            <a href="/index.html">Home</a>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
 
-            <a href="/video.html">Video</a>
+                <li><a href="/video.html">Video</a></li>
             
-            <a href="/contact.html">Contact</a>
+                <li><a href="/contact.html">Contact</a></li>
+        </ul>
         </nav>
 
     </header>
