--- a/video.html
+++ b/video.html
@@ -27,8 +27,12 @@
 
     </header>
 
-    <footer>social media links</footer>
+
+<iframe width="420" height="315"></iframe>
+    
     
 </body>
+
+<footer>social media links</footer>
 
 </html>
