added youtube videos to second page with playlist

--- a/video.html
+++ b/video.html
@@ -34,12 +34,10 @@
         
         </nav>
 
-        <video src="https://www.youtube.com/watch?v=dvwdo8bJ2qU&t=86s" controls></video>
+        <div class="yt-video"><iframe src="https://www.youtube.com/embed/dvwdo8bJ2qU?color=white&playlist=dvwdo8bJ2qU,4uGWf-NDrkI,FEtyConUWyM"></iframe>
+        </div>
 
-
-
-
-    <footer>social media links</footer>
+<footer>social media links</footer>
     
 </body>
 
