added alignment of images and padding

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </nav>
 
         <aside>
-            <h2>Lovely South African Cuisine prapered and made the traditional way</h2>
+            <h2>Lovely South African Boerewors prapered and made the traditional way</h2>
         </aside>
 
 <!-- Three clickable images for tutorial videos-->
