fixed second page video playlist and added styling

--- a/video.html
+++ b/video.html
@@ -34,7 +34,8 @@
         
         </nav>
 
-        <div class="yt-video"><iframe src="https://www.youtube.com/embed/dvwdo8bJ2qU?color=white&playlist=dvwdo8bJ2qU,4uGWf-NDrkI,FEtyConUWyM"></iframe>
+        <div class="yt-video"><iframe 
+            src="https://www.youtube.com/embed/dvwdo8bJ2qU?color=white&playlist=dvwdo8bJ2qU,4uGWf-NDrkI,FEtyConUWyM"></iframe>
         </div>
 
 <footer>social media links</footer>
