--- a/index.html
+++ b/index.html
@@ -41,19 +41,25 @@
 <!-- Three clickable images for tutorial videos-->
 
 <div class="fade-box">
+    <a href="/video.html">
     <img src="/assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
+    </a>
     <div class="middle"><div class="text">How to make Boerewors</div>
     </div>
 </div>
 
 <div class="fade-box">
+    <a href="/video.html">
     <img src="/assets/img/boereword-braai.jpg" alt="Boerewors on grill" class="image">
+    </a>
     <div class="middle"><div class="text">How to Braai Boerewors</div>
     </div>
 </div>
 
 <div class="fade-box">
+    <a href="/video.html">
     <img src="/assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
+    </a>
     <div class="middle"><div class="text">How to relish Boerewors</div>
     </div>
 </div>
