--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Art of Braai</title>
 </head>
@@ -64,8 +66,14 @@
     </div>
 </div>
 
+<!--Social media links-->
 
-    <footer>social media links</footer>
+    <footer>
+        <i>Instagram</i>
+        <i>Facebook</i>
+        <i>Twitter</i>
+        <i>Youtube</i>
+    </footer>
     
 </body>
 
