--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,27 @@
 
 </nav>
 
+<!--Contact Us-->
+
+<form method="post" action="" class="contact-us">
+
+<h2>Contact Us!</h2>
+
+<label for="fname">First Name</label>
+<input type="text" id="fname" name="first_name" class="text-input" required>
+
+<label for="lname">Last Name</label>
+<input type="text" id="lname" name="last_name" class="text-input" required>
+
+<label for="email">Email Address</label>
+<input type="email" id="email" name="email_address" class="text-input" required>
+
+<textarea name="message" rows="15" cols="40" placeholder="Leave a comment!"></textarea>
+<br><br>
+<input type="submit" value="Submit" class="submit-button">
+
+</form>
+
 <!--Social media links-->
 
     <footer>
