added text to footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
 
         <aside>
-            <h2>Lovely South African Boerewors prapered and made the traditional way</h2>
+            <h2>Lets learn how to make a lovely South African Boerewors roll the traditional way!</h2>
         </aside>
 
 <!-- Three clickable images for tutorial videos-->
@@ -59,7 +59,7 @@
     <a href="/video.html">
     <img src="/assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
     </a>
-    <div class="middle"><div class="text">How to relish Boerewors</div>
+    <div class="middle"><div class="text">How to complete your Boerewors roll</div>
     </div>
 </div>
 
@@ -79,6 +79,7 @@
             <li>
                 <a href="https://youtube.com" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a>
             </li>
+            <li>Follow Us</li>
         </ul>
     </footer>
 
