--- a/video.html
+++ b/video.html
@@ -34,8 +34,17 @@
 
 </nav>
 
-        <div class="yt-video"><iframe 
-            src="https://www.youtube.com/embed/dvwdo8bJ2qU?color=white&playlist=dvwdo8bJ2qU,4uGWf-NDrkI,FEtyConUWyM"></iframe>
+<!--Youtube Videos-->
+
+        <div class="yt-video1"><iframe width="1029" height="579" src="https://www.youtube.com/embed/dvwdo8bJ2qU" title="How to make your own Boerewors" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></iframe>
+        </div>
+
+        <div class="yt-video2">
+            <iframe width="1029" height="579" src="https://www.youtube.com/embed/4uGWf-NDrkI" title="How to Braai: Boerewors (Sausage) & Chops" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>>
+        </div>
+
+        <div class="ytvideo3">
+            <iframe width="1029" height="579" src="https://www.youtube.com/embed/6HlMiu_SQlY" title="Boerewors Rolls with Tomato & Onion Smoor | The Braai Guys" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
         </div>
 
 <!--Social media links-->
