added new styling to youtube videos and fixed issue with individual image click to video

--- a/index.html
+++ b/index.html
@@ -39,33 +39,34 @@
 
 <!-- Three clickable images for tutorial videos-->
 
-<div class="fade-box">
-    <a href="/video.html">
+<main class="fade-box">
+    <a href="/video.html#yt-video1">
     <img src="/assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
     </a>
     <div class="middle"><div class="text">How to make Boerewors</div>
     </div>
-</div>
+</main>
 
-<div class="fade-box">
-    <a href="/video.html">
+<main class="fade-box">
+    <a href="/video.html#yt-video2">
     <img src="/assets/img/boereword-braai.jpg" alt="Boerewors on grill" class="image">
     </a>
     <div class="middle"><div class="text">How to Braai Boerewors</div>
     </div>
-</div>
+</main>
 
-<div class="fade-box">
-    <a href="/video.html">
+<main class="fade-box">
+    <a href="/video.html#yt-video3">
     <img src="/assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
     </a>
     <div class="middle"><div class="text">How to complete your Boerewors roll</div>
     </div>
-</div>
+</main>
 
 <!--Social media links-->
 
-    <footer>
+    <footer class="footer">
+
         <ul class="social-links">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a>
