--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             </ul>
         
         </nav>
+<!--Hero image-->
 
+<!--Greeting Message-->
         <aside>
             <h2>Lets learn how to make a lovely South African Boerewors roll the traditional way!</h2>
         </aside>
@@ -43,7 +45,7 @@
     <a href="/video.html#yt-video1">
     <img src="/assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
     </a>
-    <div class="middle"><div class="text">How to make Boerewors</div>
+    <div class="middle"><a class="text" href="/video.html#yt-video1">How to make Boerewors</a>
     </div>
 </main>
 
@@ -51,7 +53,7 @@
     <a href="/video.html#yt-video2">
     <img src="/assets/img/boereword-braai.jpg" alt="Boerewors on grill" class="image">
     </a>
-    <div class="middle"><div class="text">How to Braai Boerewors</div>
+    <div class="middle"><a class="text" href="/video.html#yt-video2">How to Braai Boerewors</a>
     </div>
 </main>
 
@@ -59,7 +61,7 @@
     <a href="/video.html#yt-video3">
     <img src="/assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
     </a>
-    <div class="middle"><div class="text">How to complete your Boerewors roll</div>
+    <div class="middle"><a class="text" href="/video.html#yt-video3">Relish your Boerewors roll</a>
     </div>
 </main>
 
