--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,9 @@
 
 <!--Contact Us-->
 
-<form method="post" action="" class="contact-us">
-
 <h2>Contact Us!</h2>
 
+<form action="" class="flex-container">
 <label for="fname">First Name</label>
 <input type="text" id="fname" name="first_name" class="text-input" required>
 
@@ -49,10 +48,9 @@
 <label for="email">Email Address</label>
 <input type="email" id="email" name="email_address" class="text-input" required>
 
-<textarea name="message" rows="15" cols="40" placeholder="Leave a comment!"></textarea>
-<br><br>
-<input type="submit" value="Submit" class="submit-button">
-
+<label id="comment" for="comment">Comment</label>
+<textarea name="message" rows="30" cols="10" placeholder="Leave a comment!"></textarea>
+<button type="submit">SUBMIT</button>
 </form>
 
 <!--Social media links-->
