--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 
 <div class="container">
-<h2>Contact Us!</h2>
+<h2>We would like to hear from you!</h2>
 <form action="">
 <label for="fname" class="fname">First Name</label>
 <input type="text" id="fname" name="first_name" class="text-input" required>
@@ -52,7 +52,7 @@
 <br><br>
 
 <label id="comment" for="comment">Comment</label>
-<textarea id="subject" name="subject" rows="30" cols="10" placeholder="Leave a comment!"></textarea>
+<textarea id="subject" name="subject" rows="30" cols="5" placeholder="Leave a comment!"></textarea>
 
 <input type="submit" value="submit">
 </form>
