--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 <label id="comment" for="comment">Comment</label>
 <textarea id="subject" name="subject" rows="30" cols="5" placeholder="Leave a comment!"></textarea>
 
-<input type="submit" value="submit">
+<button type="submit" value="submit">Submit</button>
 </form>
 </div>
 
