--- a/video.html
+++ b/video.html
@@ -36,16 +36,17 @@
 
 <!--Youtube Videos-->
 
-        <div id="yt-video1"><iframe width="1029" height="579" src="https://www.youtube.com/embed/dvwdo8bJ2qU" title="How to make your own Boerewors" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></iframe>
-        </div>
+    <section class="video-container">
+            <figure id="yt-video1"><iframe width="1029" height="579" src="https://www.youtube.com/embed/dvwdo8bJ2qU" title="How to make your own Boerewors" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></figure>
 
-        <div id="yt-video2">
-            <iframe width="1029" height="579" src="https://www.youtube.com/embed/4uGWf-NDrkI" title="How to Braai: Boerewors (Sausage) & Chops" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>>
-        </div>
+        <figure id="yt-video2">
+            <iframe width="1029" height="579" src="https://www.youtube.com/embed/4uGWf-NDrkI" title="How to Braai: Boerewors (Sausage) & Chops" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </figure>
 
-        <div id="yt-video3">
+        <figure id="yt-video3">
             <iframe width="1029" height="579" src="https://www.youtube.com/embed/6HlMiu_SQlY" title="Boerewors Rolls with Tomato & Onion Smoor | The Braai Guys" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-        </div>
+        </figure>
+    </section>
 
 <!--Social media links-->
 
