added responive to iframes for youtube videos

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
             </ul>
         
         </nav>
-<!--Hero image-->
 
-<!--Greeting Message-->
+<!--Greeting Message (will become hero slideshow)-->
         <aside>
             <h2>Lets learn how to make a lovely South African Boerewors roll the traditional way!</h2>
         </aside>
