--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
 
 
 
-<div class="container">
-<h2>We would like to hear from you!</h2>
-<form action="">
+<section>
+<form method="post" action="" class="container">
+    <h2>We would like to hear from you!</h2>
 <label for="fname" class="fname">First Name</label>
 <input type="text" id="fname" name="first_name" class="text-input" required>
 
@@ -56,7 +56,7 @@
 
 <button type="submit" value="submit">Submit</button>
 </form>
-</div>
+</section>
 
 <!--Social media links-->
 
