--- a/video.html
+++ b/video.html
@@ -36,6 +36,7 @@
 
 <!--Youtube Videos-->
 
+    <section id="video-container">
         <figure id="yt-video1">
             <iframe width="854" height="480" src="https://www.youtube.com/embed/dvwdo8bJ2qU" title="How to make your own Boerewors" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
         </figure>
@@ -47,6 +48,7 @@
         <figure id="yt-video3">
             <iframe width="854" height="480" src="https://www.youtube.com/embed/6HlMiu_SQlY" title="Boerewors Rolls with Tomato & Onion Smoor | The Braai Guys" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
         </figure>
+    </section>
 
 <!--Social media links-->
 
