added hero slideshow images

--- a/index.html
+++ b/index.html
@@ -33,10 +33,97 @@
         
         </nav>
 
-<!--Greeting Message (will become hero slideshow)-->
-        <aside>
-            <h2>Lets learn how to make a lovely South African Boerewors roll the traditional way!</h2>
-        </aside>
+<!--Hero slideshow -->
+       
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img src="/assets/img-slideshow/boerewors1.jpg">
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">2 / 16</div>
+    <img img="/assets/">
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">1 / 16</div>
+    <img>
+    <div class="capt-text">Caption text</div>
+</Section>
 
 <!-- Three clickable images for tutorial videos-->
 
