--- a/index.html
+++ b/index.html
@@ -43,87 +43,121 @@
 
 <Section class="mySlides fade">
     <div class="numbertext">2 / 16</div>
-    <img img="/assets/">
+    <img src="/assets/img-slideshow/boerewors2.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">3 / 16</div>
+    <img src="/assets/img-slideshow/boerewors-wgrill.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">4 / 16</div>
+    <img src="/assets/img-slideshow/bw-ong-raw.jpg"   >
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">5 / 16</div>
+    <img src="/assets/img-slideshow/bw-ong-cooked.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">6 / 16</div>
+    <img src="/assets/img-slideshow/bw-ong-raw-with-burgers.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">7 / 16</div>
+    <img src="/assets/img-slideshow/close-bwr-wm.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">8 / 16</div>
+    <img src="/assets/img-slideshow/close-bwr-wm2.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">9 / 16</div>
+    <img src="/assets/img-slideshow/close-bwr-wr.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">10 / 16</div>
+    <img src="/assets/img-slideshow/close-bwr-wr2.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">11 / 16</div>
+    <img src="/assets/img-slideshow/close-bwr-wr3.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">12 / 16</div>
+    <img src="/assets/img-slideshow/grill-close.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">13 / 16</div>
+    <img src="/assets/img-slideshow/Half-eaten.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">14 / 16</div>
+    <img src="/assets/img-slideshow/perfect-grill.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
 
 <Section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img>
+    <div class="numbertext">15 / 16</div>
+    <img src="/assets/img-slideshow/stacked-bw.jpg">
     <div class="capt-text">Caption text</div>
 </Section>
+
+<Section class="mySlides fade">
+    <div class="numbertext">16 / 16</div>
+    <img src="/assets/img-slideshow/weber-perfect.jpg">
+    <div class="capt-text">Caption text</div>
+</Section>
+
+<!--Next and prev buttons-->
+
+<a class="prev" onclick="plusSlides(-1)">&#10094</a>
+<a class="next" onclick="plusSlides(1)">&#10095</a>
+</div>
+<br>
+
+<!--Dots and Circles-->
+
+<section style="text-align: center;">
+    <span class="dot" onclick="currentslide(1)"></span>
+    <span class="dot" onclick="currentslide(2)"></span>
+    <span class="dot" onclick="currentslide(3)"></span>
+    <span class="dot" onclick="currentslide(4)"></span>
+    <span class="dot" onclick="currentslide(5)"></span>
+    <span class="dot" onclick="currentslide(6)"></span>
+    <span class="dot" onclick="currentslide(7)"></span>
+    <span class="dot" onclick="currentslide(8)"></span>
+    <span class="dot" onclick="currentslide(9)"></span>
+    <span class="dot" onclick="currentslide(10)"></span>
+    <span class="dot" onclick="currentslide(11)"></span>
+    <span class="dot" onclick="currentslide(12)"></span>
+    <span class="dot" onclick="currentslide(13)"></span>
+    <span class="dot" onclick="currentslide(14)"></span>
+    <span class="dot" onclick="currentslide(15)"></span>
+    <span class="dot" onclick="currentslide(16)"></span>
+</section>
 
 <!-- Three clickable images for tutorial videos-->
 
