added slideshow container  in html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </nav>
 
 <!--Hero slideshow -->
-       
+<section class="slideshow-container"></section>       
+
 <Section class="mySlides fade">
     <div class="numbertext">1 / 16</div>
     <img src="/assets/img-slideshow/boerewors1.jpg" style="width:100%;">
