--- a/index.html
+++ b/index.html
@@ -34,103 +34,105 @@
         </nav>
 
 <!--Hero slideshow -->
-<section class="slideshow-container"></section>       
+<section class="slideshow-container">       
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">1 / 16</div>
     <img src="/assets/img-slideshow/boerewors1.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">2 / 16</div>
     <img src="/assets/img-slideshow/boerewors2.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">3 / 16</div>
     <img src="/assets/img-slideshow/boerewors-wgrill.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">4 / 16</div>
     <img src="/assets/img-slideshow/bw-ong-raw.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">5 / 16</div>
     <img src="/assets/img-slideshow/bw-ong-cooked.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">6 / 16</div>
     <img src="/assets/img-slideshow/bw-ong-raw-with-burgers.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">7 / 16</div>
     <img src="/assets/img-slideshow/close-bwr-wm.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">8 / 16</div>
     <img src="/assets/img-slideshow/close-bwr-wm2.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">9 / 16</div>
     <img src="/assets/img-slideshow/close-bwr-wr.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">10 / 16</div>
     <img src="/assets/img-slideshow/close-bwr-wr2.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">11 / 16</div>
     <img src="/assets/img-slideshow/close-bwr-wr3.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">12 / 16</div>
     <img src="/assets/img-slideshow/grill-close.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">13 / 16</div>
     <img src="/assets/img-slideshow/Half-eaten.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">14 / 16</div>
     <img src="/assets/img-slideshow/perfect-grill.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">15 / 16</div>
     <img src="/assets/img-slideshow/stacked-bw.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
 
-<Section class="mySlides fade">
+<section class="mySlides fade">
     <div class="numbertext">16 / 16</div>
     <img src="/assets/img-slideshow/weber-perfect.jpg" style="width:100%;">
     <div class="capt-text">Caption text</div>
-</Section>
+</section>
+
+</section>
 
 <!--Next and prev buttons-->
 
