had to remove code for hero slideshow idea due to java script needed

--- a/index.html
+++ b/index.html
@@ -33,133 +33,9 @@
         
         </nav>
 
-<!--Hero slideshow -->
+<!--Hero image-->
 <section class="slideshow-container">       
 
-<section class="mySlides fade">
-    <div class="numbertext">1 / 16</div>
-    <img src="/assets/img-slideshow/boerewors1.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">2 / 16</div>
-    <img src="/assets/img-slideshow/boerewors2.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">3 / 16</div>
-    <img src="/assets/img-slideshow/boerewors-wgrill.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">4 / 16</div>
-    <img src="/assets/img-slideshow/bw-ong-raw.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">5 / 16</div>
-    <img src="/assets/img-slideshow/bw-ong-cooked.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">6 / 16</div>
-    <img src="/assets/img-slideshow/bw-ong-raw-with-burgers.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">7 / 16</div>
-    <img src="/assets/img-slideshow/close-bwr-wm.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">8 / 16</div>
-    <img src="/assets/img-slideshow/close-bwr-wm2.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">9 / 16</div>
-    <img src="/assets/img-slideshow/close-bwr-wr.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">10 / 16</div>
-    <img src="/assets/img-slideshow/close-bwr-wr2.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">11 / 16</div>
-    <img src="/assets/img-slideshow/close-bwr-wr3.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">12 / 16</div>
-    <img src="/assets/img-slideshow/grill-close.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">13 / 16</div>
-    <img src="/assets/img-slideshow/Half-eaten.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">14 / 16</div>
-    <img src="/assets/img-slideshow/perfect-grill.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">15 / 16</div>
-    <img src="/assets/img-slideshow/stacked-bw.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-<section class="mySlides fade">
-    <div class="numbertext">16 / 16</div>
-    <img src="/assets/img-slideshow/weber-perfect.jpg" style="width:100%;">
-    <div class="capt-text">Caption text</div>
-</section>
-
-</section>
-
-<!--Next and prev buttons-->
-
-<a class="prev" onclick="plusSlides(-1)">&#10094</a>
-<a class="next" onclick="plusSlides(1)">&#10095</a>
-</div>
-<br>
-
-<!--Dots and Circles-->
-
-<section style="text-align: center;">
-    <span class="dot" onclick="currentslide(1)"></span>
-    <span class="dot" onclick="currentslide(2)"></span>
-    <span class="dot" onclick="currentslide(3)"></span>
-    <span class="dot" onclick="currentslide(4)"></span>
-    <span class="dot" onclick="currentslide(5)"></span>
-    <span class="dot" onclick="currentslide(6)"></span>
-    <span class="dot" onclick="currentslide(7)"></span>
-    <span class="dot" onclick="currentslide(8)"></span>
-    <span class="dot" onclick="currentslide(9)"></span>
-    <span class="dot" onclick="currentslide(10)"></span>
-    <span class="dot" onclick="currentslide(11)"></span>
-    <span class="dot" onclick="currentslide(12)"></span>
-    <span class="dot" onclick="currentslide(13)"></span>
-    <span class="dot" onclick="currentslide(14)"></span>
-    <span class="dot" onclick="currentslide(15)"></span>
-    <span class="dot" onclick="currentslide(16)"></span>
 </section>
 
 <!-- Three clickable images for tutorial videos-->
