changed hero slideshow to hero image and add html and css code

--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
         </nav>
 
 <!--Hero image-->
-<section class="slideshow-container">       
-
+<section id="hero-outer">       
+<div id="hero-image"></div>
+<div id="cover-text">
+    <h2>It doesnt get better than a lekker South African braai!</h2>
+    <h3></h3>
+</div>
 </section>
 
 <!-- Three clickable images for tutorial videos-->
