--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 </div>
 </section>
 
-<!-- Three clickable images for tutorial videos-->
+<!-- Middle section-->
+
+<h2 id="middle-content">Lets learn how to make a traditional Boerewors roll "South African Hot Dog"</h2>
+
+<!--Three clickable images for tutorial videos-->
 
 <main class="fade-box">
     <a href="/video.html#yt-video1">
