added space to  middle content text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- Middle section-->
 
-<h2 id="middle-content">Lets learn how to make a traditional Boerewors roll "South African Hot Dog"</h2>
+<h2 id="middle-content">Lets learn how to make a traditional Boerewors roll <br>"South African Hot Dog"</h2>
 
 <!--Three clickable images for tutorial videos-->
 
