--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 <div id="hero-image"></div>
 <div id="cover-text">
     <h2>It doesnt get better than a lekker South African braai!</h2>
-    <h3></h3>
 </div>
 </section>
 
@@ -48,29 +47,29 @@
 
 <!--Three clickable images for tutorial videos-->
 
-<main class="fade-box">
+<section class="fade-box">
     <a href="/video.html#yt-video1">
     <img src="/assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video1">How to make Boerewors</a>
     </div>
-</main>
+</section>
 
-<main class="fade-box">
+<section class="fade-box">
     <a href="/video.html#yt-video2">
     <img src="/assets/img/boereword-braai.jpg" alt="Boerewors on grill" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video2">How to Braai Boerewors</a>
     </div>
-</main>
+</section>
 
-<main class="fade-box">
+<section class="fade-box">
     <a href="/video.html#yt-video3">
     <img src="/assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video3">Relish your Boerewors roll</a>
     </div>
-</main>
+</section>
 
 <!--Sticky footer-->
 <div class="push"></div>
