--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
 
 <!--Three clickable images for tutorial videos-->
 
-<section class="fade-box">
+<figure class="fade-box">
     <a href="/video.html#yt-video1">
     <img src="/assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video1">How to make Boerewors</a>
     </div>
-</section>
+</figure>
 
-<section class="fade-box">
+<figure class="fade-box">
     <a href="/video.html#yt-video2">
     <img src="/assets/img/boereword-braai.jpg" alt="Boerewors on grill" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video2">How to Braai Boerewors</a>
     </div>
-</section>
+</figure>
 
-<section class="fade-box">
+<figure class="fade-box">
     <a href="/video.html#yt-video3">
     <img src="/assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video3">Relish your Boerewors roll</a>
     </div>
-</section>
+</figure>
 
 <!--Sticky footer-->
 <div class="push"></div>
