--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 
 <section>
-<form method="post" action="" class="container">
+<form method="post" class="container">
     <h2>We would like to hear from you!</h2>
 <label for="fname" class="fname">First Name</label>
 <input type="text" id="fname" name="first_name" class="text-input" required>
@@ -51,7 +51,7 @@
 <input type="email" id="email" name="email_address" class="text-input" required>
 <br><br>
 
-<label id="comment" for="comment">Comment</label>
+<label for="comment">Comment</label>
 <textarea id="subject" name="subject" rows="30" cols="5" placeholder="Leave a comment!"></textarea>
 
 <button type="submit" value="submit">Submit</button>
@@ -61,7 +61,7 @@
 <!--Social media links-->
 
     <footer>
-        <ul class="social-links">
+        <ul class="social-links-p3">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a>
             </li>
