--- a/video.html
+++ b/video.html
@@ -36,19 +36,19 @@
 
 <!--Youtube Videos-->
 
-    <section id="video-container">
+    <div id="video-container">
         <figure id="yt-video1">
-            <iframe width="854" height="480" src="https://www.youtube.com/embed/dvwdo8bJ2qU" title="How to make your own Boerewors" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
+            <iframe width="854" height="480" src="https://www.youtube.com/embed/dvwdo8bJ2qU" title="How to make your own Boerewors"  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
         </figure>
 
         <figure id="yt-video2">
-            <iframe width="854" height="480" src="https://www.youtube.com/embed/4uGWf-NDrkI" title="How to Braai: Boerewors (Sausage) & Chops" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="854" height="480" src="https://www.youtube.com/embed/4uGWf-NDrkI" title="How to Braai: Boerewors (Sausage) & Chops"  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </figure>
 
         <figure id="yt-video3">
-            <iframe width="854" height="480" src="https://www.youtube.com/embed/6HlMiu_SQlY" title="Boerewors Rolls with Tomato & Onion Smoor | The Braai Guys" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+            <iframe width="854" height="480" src="https://www.youtube.com/embed/6HlMiu_SQlY" title="Boerewors Rolls with Tomato & Onion Smoor | The Braai Guys"  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
         </figure>
-    </section>
+    </div>
 
 <!--Social media links-->
 
