added testing content and screenshots to readme and filled in place keepers

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 <input type="email" id="email" name="email_address" class="text-input" required>
 <br><br>
 
-<label for="comment">Comment</label>
+<label for="subject">Comment</label>
 <textarea id="subject" name="subject" rows="30" cols="5" placeholder="Leave a comment!"></textarea>
 
 <button type="submit" value="submit">Submit</button>
