--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <figure class="fade-box">
     <a href="/video.html#yt-video1">
-    <img src="boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
+    <img src="/assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video1">How to make Boerewors</a>
     </div>
@@ -58,7 +58,7 @@
 
 <figure class="fade-box">
     <a href="/video.html#yt-video2">
-    <img src="boereword-braai.jpg" alt="Boerewors on grill" class="image">
+    <img src="/assets/img/boereword-braai.jpg" alt="Boerewors on grill" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video2">How to Braai Boerewors</a>
     </div>
@@ -66,7 +66,7 @@
 
 <figure class="fade-box">
     <a href="/video.html#yt-video3">
-    <img src="boerewors-roll-relish.jpg" alt="Finished product" class="image">
+    <img src="/assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
     </a>
     <div class="middle"><a class="text" href="/video.html#yt-video3">Relish your Boerewors roll</a>
     </div>
