--- a/index.html
+++ b/index.html
@@ -49,26 +49,26 @@
 <!--Three clickable images for tutorial videos-->
 
 <figure class="fade-box">
-    <a href="/video.html#yt-video1">
+    <a href="video.html#yt-video1">
     <img src="assets/img/boerewors-prep.jpg" alt="Raw prepared boerewors" class="image">
     </a>
-    <div class="middle"><a class="text" href="/video.html#yt-video1">How to make Boerewors</a>
+    <div class="middle"><a class="text" href="video.html#yt-video1">How to make Boerewors</a>
     </div>
 </figure>
 
 <figure class="fade-box">
-    <a href="/video.html#yt-video2">
+    <a href="video.html#yt-video2">
     <img src="assets/img/boereword-braai.jpg" alt="Boerewors on grill" class="image">
     </a>
-    <div class="middle"><a class="text" href="/video.html#yt-video2">How to Braai Boerewors</a>
+    <div class="middle"><a class="text" href="video.html#yt-video2">How to Braai Boerewors</a>
     </div>
 </figure>
 
 <figure class="fade-box">
-    <a href="/video.html#yt-video3">
+    <a href="video.html#yt-video3">
     <img src="assets/img/boerewors-roll-relish.jpg" alt="Finished product" class="image">
     </a>
-    <div class="middle"><a class="text" href="/video.html#yt-video3">Relish your Boerewors roll</a>
+    <div class="middle"><a class="text" href="video.html#yt-video3">Relish your Boerewors roll</a>
     </div>
 </figure>
 
